@@ -1,5 +1,6 @@
 # Head
 
+- Improved the annoying emergency bodge on array formulae extraction to interpret INDIRECTs within array formulae in more cases
 - Can now parse some formulae with a trailing percentage suffix like ROUND(24.3,0)% 
 - If INDEX is passed an errors in both arguments, returns the error in its first argument
 - Now simplifies SUM() with single arguments to the single argument
